name:                rope
version:             0.1.0.0
synopsis:            Implementation of the Rope data structure
description:         https://en.wikipedia.org/wiki/Rope_(data_structure)
homepage:            https://github.com/ptrckbrwn/rope
license:             BSD3
license-file:        LICENSE
author:              Patrick Arthur Brown
maintainer:          pab@hivemind.us.org
copyright:           2016 Patrick Arthur Brown
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Rope
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite rope-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rope
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ptrckbrwn/rope
